--- a/index.html
+++ b/index.html
@@ -76,27 +76,9 @@
         .custom-scroll::-webkit-scrollbar-track {
             background: #f1f5f9; 
         }
-        .custom-scroll::-webkit-scrollbar-thumb {
-            background: #cbd5e1; 
-            border-radius: 3px;
-        }
-        .custom-scroll::-webkit-scrollbar-thumb:hover {
-            background: #94a3b8; 
-        }
-    </style>
-</head>
-<body class="bg-slate-50 text-slate-800 h-screen overflow-hidden flex flex-col md:flex-row">
-
-    <!-- Sidebar Navigation -->
-    <aside class="w-full md:w-72 bg-white border-r border-slate-200 flex flex-col z-20 shadow-lg md:shadow-none h-auto md:h-full flex-shrink-0">
-        <div class="p-6 border-b border-slate-100">
-            <h1 class="text-xl font-bold text-slate-900 leading-tight">Dossiê Setorial <span class="text-red-600 block text-sm font-normal mt-1">Ambulâncias & Remoção</span></h1>
-            <p class="text-xs text-slate-500 mt-2">Foco: B2G & Rio de Janeiro</p>
-        </div>
-        
         <nav class="flex-1 overflow-y-auto custom-scroll p-4 space-y-2">
             <button onclick="navigate('dashboard')" class="nav-btn w-full text-left px-4 py-3 rounded-lg flex items-center gap-3 transition-colors bg-blue-50 text-blue-700 font-medium" data-target="dashboard">
-                <span class="text-lg">📊</span> Visão Geral
+                <span class="text-lg">📊</span> Overview
             </button>
             <button onclick="navigate('regulation')" class="nav-btn w-full text-left px-4 py-3 rounded-lg flex items-center gap-3 hover:bg-slate-50 text-slate-600 transition-colors" data-target="regulation">
                 <span class="text-lg">⚖️</span> 1. Regulação & Leis
@@ -117,56 +99,69 @@
 
         <div class="p-4 border-t border-slate-100 text-xs text-slate-400">
             <p>Gerado para Consultoria Estratégica</p>
-            <p class="mt-1">Versão 1.0.4</p>
+            <p class="mt-1">Versão 1.0.5</p>
         </div>
     </aside>
 
-    <!-- Main Content Area -->
     <main class="flex-1 overflow-y-auto custom-scroll p-4 md:p-8 relative" id="main-content">
         
-        <!-- MODULE: DASHBOARD -->
         <section id="dashboard" class="content-section space-y-8 animate-fade-in block">
             <header class="mb-8">
                 <h2 class="text-3xl font-bold text-slate-900">Executive Summary</h2>
-                <p class="text-slate-600 mt-2 max-w-3xl">Este dossiê analisa a viabilidade, riscos e competidores no mercado de terceirização de frotas de saúde (B2G). O setor enfrenta alta pressão regulatória e desafios de fluxo de caixa, mas oferece escala em contratos municipais.</p>
+                <p class="text-slate-600 mt-2 w-full text-justify leading-relaxed">
+                    Este dossiê analisa a viabilidade, riscos e competidores no mercado de terceirização de frotas de saúde (B2G). O setor enfrenta alta pressão regulatória e desafios críticos de fluxo de caixa, mas oferece escala em contratos municipais. A transição para o modelo de locação full-service e a gestão de remoção inter-hospitalar de alta complexidade tornaram-se os pilares de sustentabilidade para os players que dominam o cenário fluminense, exigindo uma integração profunda entre eficiência logística e expertise médica qualificada para mitigar os gargalos financeiros inerentes ao setor público.
+                </p>
             </header>
 
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                <div class="bg-white p-6 rounded-xl border border-slate-200 shadow-sm border-l-4 border-l-blue-600">
-                    <h3 class="text-sm font-semibold text-slate-500 uppercase">Tendência Central</h3>
-                    <p class="text-2xl font-bold text-slate-900 mt-2">Terceirização Total</p>
-                    <p class="text-sm text-slate-600 mt-1">Migração de Frota Própria (SAMU) para Locação Full-Service.</p>
-                </div>
-                <div class="bg-white p-6 rounded-xl border border-slate-200 shadow-sm border-l-4 border-l-red-500">
-                    <h3 class="text-sm font-semibold text-slate-500 uppercase">Maior Risco (B2G)</h3>
-                    <p class="text-2xl font-bold text-slate-900 mt-2">DSO Elevado</p>
-                    <p class="text-sm text-slate-600 mt-1">Atrasos de pagamento em prefeituras chegam a 90+ dias.</p>
-                </div>
-                <div class="bg-white p-6 rounded-xl border border-slate-200 shadow-sm border-l-4 border-l-emerald-500">
-                    <h3 class="text-sm font-semibold text-slate-500 uppercase">Oportunidade RJ</h3>
-                    <p class="text-2xl font-bold text-slate-900 mt-2">Consolidação</p>
-                    <p class="text-sm text-slate-600 mt-1">Disputa acirrada entre Tuise, Lefe e players nacionais.</p>
+            <div class="space-y-4">
+                <h3 class="text-lg font-bold text-slate-800 flex items-center gap-2">
+                    <span class="text-blue-600">🔢</span> O Setor em Números
+                </h3>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+                    <div class="bg-white p-5 rounded-xl border border-slate-200 shadow-sm hover:border-blue-300 transition-all border-l-4 border-l-blue-600">
+                        <span class="text-2xl font-extrabold text-blue-700">60% a 70%</span>
+                        <h4 class="text-xs font-bold text-slate-500 uppercase mt-1 tracking-wider">Peso da Folha no OPEX</h4>
+                        <p class="text-xs text-slate-600 mt-2 leading-tight">Mão de obra é o custo esmagador. Salários não podem ser parcelados; atrasos de pagamento público quebram o caixa imediatamente.</p>
+                    </div>
+
+                    <div class="bg-white p-5 rounded-xl border border-slate-200 shadow-sm hover:border-red-300 transition-all border-l-4 border-l-red-500">
+                        <span class="text-2xl font-extrabold text-red-600">90+ Dias</span>
+                        <h4 class="text-xs font-bold text-slate-500 uppercase mt-1 tracking-wider">DSO (B2G RJ)</h4>
+                        <p class="text-xs text-slate-600 mt-2 leading-tight">Ciclo descasado: equipe recebe no dia 5, prefeitura paga com atrasos frequentes. Exige capital de giro robusto.</p>
+                    </div>
+
+                    <div class="bg-white p-5 rounded-xl border border-slate-200 shadow-sm hover:border-orange-300 transition-all border-l-4 border-l-orange-500">
+                        <span class="text-2xl font-extrabold text-slate-800">2%</span>
+                        <h4 class="text-xs font-bold text-slate-500 uppercase mt-1 tracking-wider">Custo Oculto: Multas</h4>
+                        <p class="text-xs text-slate-600 mt-2 leading-tight">Burocracia administrativa para recorrer de falsos positivos de radares em atendimentos de urgência.</p>
+                    </div>
+
+                    <div class="bg-white p-5 rounded-xl border border-slate-200 shadow-sm hover:border-emerald-300 transition-all border-l-4 border-l-emerald-500">
+                        <span class="text-xl font-extrabold text-slate-900">R$ 130.000,00</span>
+                        <h4 class="text-xs font-bold text-slate-500 uppercase mt-1 tracking-wider">Custo Máximo (USA)</h4>
+                        <p class="text-xs text-slate-600 mt-2 leading-tight">Custo de uma única ambulância de Suporte Avançado rodando 24/7. Baliza se a licitação é exequível.</p>
+                    </div>
                 </div>
             </div>
 
             <div class="bg-white p-6 rounded-xl border border-slate-200 shadow-sm">
                 <h3 class="text-lg font-bold text-slate-800 mb-4">Mapa de Calor: Dores do Setor</h3>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
-                    <div class="p-4 bg-red-50 rounded-lg">
+                    <div class="p-4 bg-red-50 rounded-lg border border-red-100 text-center">
                         <span class="text-red-700 font-bold block mb-1">Crítico</span>
-                        <p class="text-sm text-slate-700">Multas de Trânsito (Burocracia Art 29 CTB)</p>
+                        <p class="text-xs text-slate-700 font-medium">Multas (Art. 29 CTB)</p>
                     </div>
-                    <div class="p-4 bg-orange-50 rounded-lg">
+                    <div class="p-4 bg-orange-50 rounded-lg border border-orange-100 text-center">
                         <span class="text-orange-700 font-bold block mb-1">Alto</span>
-                        <p class="text-sm text-slate-700">Manutenção Corretiva (Frota antiga)</p>
+                        <p class="text-xs text-slate-700 font-medium">Manutenção de Frota</p>
                     </div>
-                    <div class="p-4 bg-yellow-50 rounded-lg">
+                    <div class="p-4 bg-yellow-50 rounded-lg border border-yellow-100 text-center">
                         <span class="text-yellow-700 font-bold block mb-1">Médio</span>
-                        <p class="text-sm text-slate-700">Turnover de Equipe Médica</p>
+                        <p class="text-xs text-slate-700 font-medium">Turnover Médico</p>
                     </div>
-                    <div class="p-4 bg-blue-50 rounded-lg">
+                    <div class="p-4 bg-blue-50 rounded-lg border border-blue-100 text-center">
                         <span class="text-blue-700 font-bold block mb-1">Controlado</span>
-                        <p class="text-sm text-slate-700">Aquisição de Veículos (Isenções)</p>
+                        <p class="text-xs text-slate-700 font-medium">Aquisição de Veículos</p>
                     </div>
                 </div>
             </div>
